--- a/src/app/Mi-Historia.html
+++ b/src/app/Mi-Historia.html
@@ -21,21 +21,21 @@
       <p>A continuación, debes elegir cuál será tu próximo paso dentro de la escuela:</p>
       
       <div>
-        <li><a href="UnirteALosProfesores.html">Unirte a los profesores y luchar contra la oscuridad en la escuela.</a></li>
-        <a href="UnirteALosProfesores.html">
+        <li><a href="/src/app/Pagina1/UnirteALosProfesores.html">Unirte a los profesores y luchar contra la oscuridad en la escuela.</a></li>
+        <a href="/src/app/Pagina1/UnirteALosProfesores.html">
             <img src="https://i.pinimg.com/564x/01/e1/1b/01e11b47790ec50a3da0f6b7f99d47cc.jpg" width="400" height="400"></a>
       </div>
       <br>
       <br>
       <div>
-        <li><a href="TrabajarEnSecreto.html">Trabajar en secreto para descubrir los verdaderos motivos detrás de la oscuridad en la escuela</a></ul></li>
-        <a href="TrabajarEnSecreto.html">
+        <li><a href="/src/app/Pagina2/TrabajarEnSecreto.html">Trabajar en secreto para descubrir los verdaderos motivos detrás de la oscuridad en la escuela</a></ul></li>
+        <a href="/src/app/Pagina2/TrabajarEnSecreto.html">
             <img src="https://i.pinimg.com/564x/08/00/1b/08001b2f23a2a1e62467c27bcda72852.jpg" width="400" height="400"></a>
       </div>
       <br>
       <br>
       <div>
-        <li><a href="Huir.html">Abandonar la escuela y huir antes de que sea demasiado tarde</a></li>
+        <li><a href="/src/app/Pagina3/Huir.html">Abandonar la escuela y huir antes de que sea demasiado tarde</a></li>
         <a href="Huir.html">
             <img src="https://i.pinimg.com/564x/c6/4d/79/c64d794f1889da8f32551057cd624119.jpg"></a>
       </div>
