--- a/src/app/index.html
+++ b/src/app/index.html
@@ -10,10 +10,10 @@
     <h1>✧ M&M's Library ✧</h1>
     <nav>
       <ul>
-        <a href="libros-populares.html">Libros Populares</a>
+        <a href="/src/not-use/libros-populares.html">Libros Populares</a>
         <a href="nuevos-lanzamientos.html">Nuevos Lanzamientos</a>
         <a href="audiolibros.html">Audiolibros</a>
-        <a href="mas-info.html">Mas informacion</a>
+        <a href="mas-info.html">Mas informacion</a> 
       </ul>
     </nav>
   </header>
